# odlparser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/odlparser/: cli.py  models.py  parser.py  reader.py  structures.py
src/odlparser/decoder/: keystore.py  obfuscation_map.py  string_extract.py  unobfuscate.py
tests/: test_cli.py  test_keystore.py  test_obfuscation_map.py  test_parser_cross_version.py  test_parser_v2.py  test_parser_v3.py  test_reader.py  test_string_extract.py  test_structures.py  test_unobfuscate.py
tests/data/: gen_minimal_v2.py  gen_minimal_v3.py  minimal_v2.odl  minimal_v3.odl  tiny_keystore.json  tiny_map.txt
